executable("hello-triangle") {
    sources = [
        "main.c",
    ]
}

action_foreach("shaders") {
    # script_executable [optional], See .gn and BUILDCONFIG on how we call glslc
    #   Path to specific Python executable or other interpreter to use in
    #   action targets and exec_script calls. By default GN searches the
    #   PATH for Python to execute these scripts.

    #   If set to the empty string, the path specified in action targets
    #   and exec_script calls will be executed directly.
    script = glslc_path

    sources = [ "shader.frag", "shader.vert" ]

    outputs = [ "$root_build_dir/{{source_file_part}}.spv" ]

    # Note that since "args" is opaque to GN, if you specify paths here, you
    # will need to convert it to be relative to the build directory using
    # rebase_path().
    args = [
        "{{source}}",
        "-o",
        rebase_path(root_build_dir) + "/{{source_file_part}}.spv" ]
}